# Qt_11401_4

./: .gitignore  BACKGROUND_EFFECTS.md  CALDAV_FIX.md  CMakeLists.txt  CalendarIntegration.pro  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  README.md  SUMMARY.md  TESTING.md  TESTING_GUIDE.md  UI_LAYOUT_VISUALIZATION.md  UI_PREVIEW.md  快速開始.md
_codeql_build_dir/: CalendarIntegration
_codeql_build_dir/CalendarIntegration_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/CalendarIntegration_autogen/3AKAH6XLXN/: moc_AppleCalendarAdapter.cpp.d  moc_CalDAVClient.cpp.d  moc_CalendarAdapter.cpp.d  moc_GoogleCalendarAdapter.cpp.d  moc_OutlookCalendarAdapter.cpp.d
_codeql_build_dir/CalendarIntegration_autogen/F2ESZRYZMC/: moc_DatabaseManager.cpp.d
_codeql_build_dir/CalendarIntegration_autogen/PRMOGMWJPH/: moc_CalendarManager.cpp.d
src/: README.md  main.cpp
src/adapters/: AppleCalendarAdapter.cpp  AppleCalendarAdapter.h  CalDAVClient.cpp  CalDAVClient.h  CalendarAdapter.h  GoogleCalendarAdapter.cpp  GoogleCalendarAdapter.h  OutlookCalendarAdapter.cpp  OutlookCalendarAdapter.h
src/core/: CalendarEvent.cpp  CalendarEvent.h  CalendarManager.cpp  CalendarManager.h  Platform.h
src/storage/: DatabaseManager.cpp  DatabaseManager.h
src/ui/: ChangeLogDialog.cpp  ChangeLogDialog.h  MainWindow.cpp  MainWindow.h
src/ui/qml/: EventDetailPanel.qml
